# BankDashBoard

./: .env  .env.example  .gitignore  Log_file.txt  README.md  README_APP.md  RunApp.vbs  app.py  conftest.py  index.html  migrate_to_postgres.py  migration_script.py  pyproject.toml  requirements.txt  vercel.json
personal information/: auto_tagger.json  categories-backup copy.json  categories.json  personal_config.json
source/: AppManager.py  Bank.py  BankTransactionsFile.py  Card.py  Constants.py  Context.py  ExcelComparator.py  ExcelExporter.py  ExcelReader.py  Exporter.py  File.py  Graphics.py  GymSplitter.py  Html.py  InnerCreditFile.py  Log_file.txt  MySelenium.py  OuterCreditFile.py  Parser.py  SpotifyTracker.py  WebApp.py  appManager.py  auth.py  config.py  database.py  decorators.py  main.py  migrate_dates.py  parser.py  queuebykey.py
source/Analysis/: SmartAlerts.py
source/Configurations/: AlertsConfig.py  DownloadConfig.py  Formats.py  Formtas.py
source/Downloader/: BaseSiteDownloader.py  CredentialManager.py  DownloadManager.py  __init__.py
source/Testing/: test_continuous_payments.py  test_spotify_tracker.py
source/front/: Graphics.py
source/html/: Base_template.html  Bills.html  Card table template.html  Category_sassy.css  Category_sassy.scss  Files.html  (+13 more)
sourceV2/: AppManager.py  Bank.py  BankTransactions.py  BankTransactionsFile.py  Constants.py  Context.py  File.py  InnerCredit.py  InnerCreditFile.py  OuterCredit.py  OuterCreditFile.py  Parser.py  Visa.py  database.py  decorators.py  main.py
tests/: test_auth.py  test_login_activity.py
(+18 files in other folders)
