[project]
name = "bankdashboard"
version = "1.0.0"
description = "Bank transaction dashboard with PostgreSQL backend"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.2",
    "Flask-Session==0.5.0",
    "pandas==2.1.4",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pytest==7.4.0",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "selenium==4.15.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "send2trash==1.8.2",
    "tqdm==4.66.1",
    "python-dateutil==2.8.2",
    "numpy==1.24.3",
    "seaborn==0.12.2",
    "xlwings==0.30.4",
]

[tool.vercel]
entrypoint = "app:app"
